# wt-playground

./: .gitignore  README.md  wt_config.xml
app-stylus/: CMakeLists.txt
app-tailwind-classes/: CMakeLists.txt  logs.txt  stylus-state.xml  templates.xml  wt_config.xml
app-tailwind-classes/0/003-Tailwind/: WTConfig.cpp  WTVariableText.cpp
app-tailwind-classes/0/004-FilesManager/: MonacoEdditor.cpp  MonacoEdditor.h
app-tailwind-classes/0/005-TailwindConfigCenter/: TailwindConfigCenter.cpp
app-tailwind-classes/0/006-TemplatesManager/: TemplatesManager.cpp
app-tailwind-classes/0/tests/: input-classes.css  override-wt.css
app-tailwind-classes/js/default/: utils.js
app-tailwind-classes/src/001-App/: App.cpp  App.h
app-tailwind-classes/src/003-Tailwind/: CssFilesManager.cpp  CssFilesManager.h  MonacoCssEdditor.cpp  MonacoCssEdditor.h  TVariable.cpp  TVariable.h  WTConfig.cpp  WTConfig.h  WTVariable.cpp  WTVariableText.h
app-tailwind-classes/src/004-CssFilesManager/: CssFilesManager.cpp  CssFilesManager.h  MonacoCssEdditor.cpp  MonacoCssEdditor.h
app-tailwind-classes/src/004-FilesManager/: FilesManager.cpp  FilesManager.h  MonacoEdditor.cpp  MonacoEdditor.h
app-tailwind-classes/src/004-FilesManagers/: CssFilesManager.cpp  CssFilesManager.h  MonacoEdditor.cpp  MonacoEdditor.h
app-tailwind-classes/src/005-TailwindConfigCenter/: TailwindConfigCenter.cpp  TailwindConfigCenter.h
app-tailwind-classes/src/010-TestWidgets/: DarkModeToggle.cpp  DarkModeToggle.h
app-tailwind-classes/static/: tailwind.css
app-tailwind-classes/tailwind4/: input.css  package.json
(+112 files in other folders)
